--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@fortawesome/free-brands-svg-icons": "^6.5.1",
+		"@fortawesome/react-fontawesome": "^0.2.0",
 		"bootstrap": "^5.3.2",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.9.1",
@@ -20,7 +22,7 @@
 		"@types/react": "^18.2.37",
 		"@types/react-dom": "^18.2.15",
 		"@vitejs/plugin-react": "^4.2.0",
-		"vite": "^5.0.0",
-		"prettier": "^2.7.1"
+		"prettier": "^2.7.1",
+		"vite": "^5.0.0"
 	}
 }
